# https-server-c

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.sh  configure.sh
include/modules/: common.h  errors.h  modules.h  server.h
src/: main.c
src/modules/: common.c  modules.c  server.c
tests/modules/: modules_test.c
